hphp/test/zend/good/tests/classes/interface_method.php.expectf

Fatal error: A class member, method, type, trait usage, trait require, xhp attribute, xhp use, or xhp category is expected here. in %s/interface_method.php on line 5
